<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:entries="@array/mode_entries"
        app:entryValues="@array/mode_values"
        app:key="mode"
        app:title="@string/mode_title"
        app:useSimpleSummaryProvider="true" />

    <Preference
        app:key="timezone"
        app:title="@string/timezone_title" />

    <ListPreference
        app:entries="@array/time_format_entries"
        app:entryValues="@array/time_format_values"
        app:key="time_format"
        app:title="@string/time_format_title"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:key="custom_label"
        app:summary="@string/custom_label_summary"
        app:title="@string/custom_label_title"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        app:key="show_offset_label"
        app:summary="@string/show_offset_label_summary"
        app:title="@string/show_offset_label_title" />
</PreferenceScreen>
